--- a/index.html
+++ b/index.html
@@ -4,35 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Layout Practice Page</title>
-    <link rel="stylesheets" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header class = "Header">
-        <h1 class = "HeaderHeading">CSS Layout Practice Page</h1>
-        <scum class = "HeaderDesc1">Pracitce CSS Grid, Flexbox, Positioning, Media Queries, and More!</scum>
-    </header>
-    <main>
-        <div class = "Grid">
+<body class = "body">
 
-            <div class = "GridHeading">
-                <h3>CSS Grid Practice</h3>
-            </div> 
+    <!-- <div class = "static">Standing here</div> -->
+    <div class = "container">
 
-            <div class = "GridDesc1">
-                <scum>Basic Grid (Auto-fit & Minimax)</scum>
+        <header class = "section">
+            <h1 class = "headerHeading">CSS Layout Practice Page</h1>
+            <p class = "headerdesc1">Practice CSS Grid, Flexbox, Positioning, Media Queries, and More!</p>
+        </header>
+        
+        <section class = "section">
+            <h2 class = "title">🔲 CSS Grid Practice</h2>
+            <h3>Basic Grid (Auto-fit & Minimax)</h3>
+
+            <div class = "grid-base">
+                <div>Grid Item1</div>
+                <div>Grid Item2</div>
+                <div>Grid Item3</div>
+                <div>Grid Item4</div>
+                <div>Grid Item5</div>
+                <div>Grid Item6</div>
             </div>
 
-            <div class = "GridItems1">
-                <scum>Grid Item 1</scum>
-                <scum>Grid Item 2</scum>
-                <scum>Grid Item 3</scum>
-                <scum>Grid Item 4</scum>
-                <scum>Grid Item 5</scum>
-                <scum>Grid Item 6</scum>
+            <h3>Advanced Grid Layout</h3>
+
+            <div class = "grid-advanced">
+                <div>Header (spans 3 columns)</div>
+                <div>Sidebar</div>
+                <div>Footer Left</div>
+                <div>Main Content</div>
+                <div>Ads</div>
+                <div>Footer Right</div>
             </div>
-        </div>
+        </section>
 
+        <section class = "section">
+            <h2 class = "title">📦 Flexbox Practice</h2>
+            <h3>Flexible Items</h3>
 
-    </main>
+            <div class = "flex-base">
+                <div>Flex Item 1</div>
+                <div>Flex Item 2</div>
+                <div>Flex Item 3</div>
+            </div>
+            
+            <h3>Flex Direction & Alignment</h3>
+
+            <div class = "flex-advanced">
+                <div>Left</div>
+                <div>Center</div>
+                <div>Right</div>
+            </div>
+
+            <div class = "flex-advanced2">
+                <div>Column Item 1</div>
+                <div>Column Item 2</div>
+                <div>Column Item 3</div>
+            </div>
+        </section>
+
+        <section class = "section">
+            <h2 class = "title">📍 Position Practice</h2>
+            <div class = "sticky">Sticky Header (scroll to see effect)</div>
+            <div class = "relative">Relative Container</div>
+            <div class = "absolute">Absolute Position</div>
+            <p calss = "position">Notice the fixed position element in the bottom-right corner!</p>
+        </section>
+
+        <section class = "section">
+
+            <h2 class = "title">📊 Table Practice</h2>
+            <h3>Styled Data Table</h3>
+
+            <!--should be tabel-->
+
+            <h3>Responsive Card Layout (Alternative to Tables)</h3>
+
+            <!--should be tabel-->
+
+        </section>
+
+        <section class = "section">
+            <h2 class = "title">📝 Form & Input Practice</h2>
+        </section>
+
+    </div>
 </body>
 </html>
