--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         
         <section class = "section">
             <h2 class = "title">🔲 CSS Grid Practice</h2>
-            <h3>Basic Grid (Auto-fit & Minimax)</h3>
+            <h3>Basic Grid (Auto-fit & Minmax)</h3>
 
             <div class = "grid-base">
-                <div>Grid Item1</div>
+                <div class = "">Grid Item1</div>
                 <div>Grid Item2</div>
                 <div>Grid Item3</div>
                 <div>Grid Item4</div>
