--- a/index.html
+++ b/index.html
@@ -6,38 +6,38 @@
     <title>CSS Layout Practice Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class = "body">
+<body class ="body">
 
     <!-- <div class = "static">Standing here</div> -->
-    <div class = "container">
+    <div class ="container">
 
-        <header class = "section">
-            <h1 class = "headerHeading">CSS Layout Practice Page</h1>
-            <p class = "headerdesc1">Practice CSS Grid, Flexbox, Positioning, Media Queries, and More!</p>
+        <header class ="section">
+            <h1 class ="headerHeading">CSS Layout Practice Page</h1>
+            <p class ="headerdesc1">Practice CSS Grid, Flexbox, Positioning, Media Queries, and More!</p>
         </header>
         
-        <section class = "section">
-            <h2 class = "title">🔲 CSS Grid Practice</h2>
+        <section class ="section">
+            <h2 class ="title">🔲 CSS Grid Practice</h2>
             <h3>Basic Grid (Auto-fit & Minmax)</h3>
 
             <div class = "grid-base">
-                <div class = "">Grid Item1</div>
-                <div>Grid Item2</div>
-                <div>Grid Item3</div>
-                <div>Grid Item4</div>
-                <div>Grid Item5</div>
-                <div>Grid Item6</div>
+                <div class ="grid-item">Grid Item 1</div>
+                <div class ="grid-item">Grid Item 2</div>
+                <div class ="grid-item">Grid Item 3</div>
+                <div class ="grid-item">Grid Item 4</div>
+                <div class ="grid-item">Grid Item 5</div>
+                <div class ="grid-item">Grid Item 6</div>
             </div>
 
             <h3>Advanced Grid Layout</h3>
 
             <div class = "grid-advanced">
-                <div>Header (spans 3 columns)</div>
-                <div>Sidebar</div>
-                <div>Footer Left</div>
-                <div>Main Content</div>
-                <div>Ads</div>
-                <div>Footer Right</div>
+                <div class ="grid-item grid-header">Header (spans 3 columns)</div>
+                <div class ="grid-item grid-sidebar">Sidebar</div>
+                <div class ="grid-item grid-footer-left">Footer Left</div>
+                <div class ="grid-item grid-main-content">Main Content</div>
+                <div class ="grid-item grid-ads">Ads</div>
+                <div class ="grid-item grid-footer-right">Footer Right</div>
             </div>
         </section>
 
@@ -53,20 +53,20 @@
             
             <h3>Flex Direction & Alignment</h3>
 
-            <div class = "flex-advanced">
+            <div class ="flex-advanced">
                 <div>Left</div>
                 <div>Center</div>
                 <div>Right</div>
             </div>
 
-            <div class = "flex-advanced2">
+            <div class ="flex-advanced2">
                 <div>Column Item 1</div>
                 <div>Column Item 2</div>
                 <div>Column Item 3</div>
             </div>
         </section>
 
-        <section class = "section">
+        <section class ="section">
             <h2 class = "title">📍 Position Practice</h2>
             <div class = "sticky">Sticky Header (scroll to see effect)</div>
             <div class = "relative">Relative Container</div>
