grid done, position in progres

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class ="body">
 
-    <!-- <div class = "static">Standing here</div> -->
+    <div class ="fixed">Fixed</div> 
     <div class ="container">
 
         <header class ="section">
@@ -21,23 +21,23 @@
             <h3>Basic Grid (Auto-fit & Minmax)</h3>
 
             <div class = "grid-base">
-                <div class ="grid-item">Grid Item 1</div>
-                <div class ="grid-item">Grid Item 2</div>
-                <div class ="grid-item">Grid Item 3</div>
-                <div class ="grid-item">Grid Item 4</div>
-                <div class ="grid-item">Grid Item 5</div>
-                <div class ="grid-item">Grid Item 6</div>
+                <div class ="base-item">Grid Item 1</div>
+                <div class ="base-item">Grid Item 2</div>
+                <div class ="base-item">Grid Item 3</div>
+                <div class ="base-item">Grid Item 4</div>
+                <div class ="base-item">Grid Item 5</div>
+                <div class ="base-item">Grid Item 6</div>
             </div>
 
             <h3>Advanced Grid Layout</h3>
 
             <div class = "grid-advanced">
-                <div class ="grid-item grid-header">Header (spans 3 columns)</div>
-                <div class ="grid-item grid-sidebar">Sidebar</div>
-                <div class ="grid-item grid-footer-left">Footer Left</div>
-                <div class ="grid-item grid-main-content">Main Content</div>
-                <div class ="grid-item grid-ads">Ads</div>
-                <div class ="grid-item grid-footer-right">Footer Right</div>
+                <div class ="base-item grid-header">Header (spans 3 columns)</div>
+                <div class ="base-item grid-sidebar">Sidebar</div>
+                <div class ="base-item grid-footer-left">Footer Left</div>
+                <div class ="base-item grid-main-content">Main Content</div>
+                <div class ="base-item grid-ads">Ads</div>
+                <div class ="base-item grid-footer-right">Footer Right</div>
             </div>
         </section>
 
@@ -46,31 +46,33 @@
             <h3>Flexible Items</h3>
 
             <div class = "flex-base">
-                <div>Flex Item 1</div>
-                <div>Flex Item 2</div>
-                <div>Flex Item 3</div>
+                <div class ="base-item flexy">Flex Item 1</div>
+                <div class ="base-item flexy">Flex Item 2</div>
+                <div class ="base-item flexy">Flex Item 3</div>
             </div>
             
             <h3>Flex Direction & Alignment</h3>
 
             <div class ="flex-advanced">
-                <div>Left</div>
-                <div>Center</div>
-                <div>Right</div>
+                <div class ="base-item">Left</div>
+                <div class ="base-item">Center</div>
+                <div class ="base-item">Right</div>
             </div>
 
             <div class ="flex-advanced2">
-                <div>Column Item 1</div>
-                <div>Column Item 2</div>
-                <div>Column Item 3</div>
+                <div class ="base-item">Column Item 1</div>
+                <div class ="base-item">Column Item 2</div>
+                <div class ="base-item">Column Item 3</div>
             </div>
         </section>
 
         <section class ="section">
-            <h2 class = "title">📍 Position Practice</h2>
-            <div class = "sticky">Sticky Header (scroll to see effect)</div>
-            <div class = "relative">Relative Container</div>
-            <div class = "absolute">Absolute Position</div>
+            <h2 class ="title">📍 Position Practice</h2>
+            <div class ="base-item sticky">Sticky Header (scroll to see effect)</div>
+            <div class ="relative-container">
+                <div class ="base-item relative">Relative Container</div>
+            </div>
+            <div class ="base-item absolute">Absolute Position</div>
             <p calss = "position">Notice the fixed position element in the bottom-right corner!</p>
         </section>
 
@@ -78,6 +80,8 @@
 
             <h2 class = "title">📊 Table Practice</h2>
             <h3>Styled Data Table</h3>
+
+            <div class="base-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ab blanditiis illum delectus praesentium quis iusto voluptates ut, vel iure neque rerum tempora cupiditate laboriosam labore hic ducimus. Quos, enim.lor Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero doloribus ab sit nihil repellat totam quod dicta soluta dolore corrupti? Beatae vitae aliquam necessitatibus qui nostrum dolorum earum molestias repellat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dolores quaerat facere soluta ipsa, nulla quidem porro minima eius, recusandae voluptate delectus ullam odit mollitia animi eos magni, aperiam debitis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores sequi voluptas sint! Corrupti, ab! Ipsum praesentium quos quod ut. Eius qui reprehenderit suscipit quasi distinctio sapiente nobis repellendus, dicta aperiam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nesciunt voluptate ipsam doloremque sed fugiat, deleniti expedita fuga odit nisi numquam rem dolores officia quisquam laboriosam quos impedit ducimus esse!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate excepturi qui ex eius. Voluptate, repudiandae quaerat. Voluptate rem voluptatum praesentium quibusdam deserunt sapiente doloremque! Esse sit odio iste delectus a!</div>
 
             <!--should be tabel-->
 
