--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <div class ="base-item sticky">Sticky Header (scroll to see effect)</div>
             <div class ="relative-container">
                 <div class ="base-item relative">Relative Container</div>
+                <div class ="base-item absolute">Absolute Position</div>
             </div>
-            <div class ="base-item absolute">Absolute Position</div>
             <p calss = "position">Notice the fixed position element in the bottom-right corner!</p>
         </section>
 
@@ -81,8 +81,50 @@
             <h2 class = "title">📊 Table Practice</h2>
             <h3>Styled Data Table</h3>
 
-            <div class="base-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ab blanditiis illum delectus praesentium quis iusto voluptates ut, vel iure neque rerum tempora cupiditate laboriosam labore hic ducimus. Quos, enim.lor Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero doloribus ab sit nihil repellat totam quod dicta soluta dolore corrupti? Beatae vitae aliquam necessitatibus qui nostrum dolorum earum molestias repellat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dolores quaerat facere soluta ipsa, nulla quidem porro minima eius, recusandae voluptate delectus ullam odit mollitia animi eos magni, aperiam debitis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores sequi voluptas sint! Corrupti, ab! Ipsum praesentium quos quod ut. Eius qui reprehenderit suscipit quasi distinctio sapiente nobis repellendus, dicta aperiam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nesciunt voluptate ipsam doloremque sed fugiat, deleniti expedita fuga odit nisi numquam rem dolores officia quisquam laboriosam quos impedit ducimus esse!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate excepturi qui ex eius. Voluptate, repudiandae quaerat. Voluptate rem voluptatum praesentium quibusdam deserunt sapiente doloremque! Esse sit odio iste delectus a!</div>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Position</th>
+                    <th>Department</th>
+                    <th>Salary</th>
+                    <th>Status</th>
+                </tr>
 
+                <tr>
+                    <td>John Doe</td>
+                    <td>Frontend Developer</td>
+                    <td>Engineering</td>
+                    <td>$75,000</td>
+                    <td>Active</td>
+                </tr>
+
+                <tr>
+                    <td>Jane Smith			</td>
+                    <td>UX Designer	Design</td>
+                    <td>$68,000</td>
+                    <td>Active</td>
+                    <td></td>
+                </tr>
+
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+
+
+            </table>
             <!--should be tabel-->
 
             <h3>Responsive Card Layout (Alternative to Tables)</h3>
