--- a/index.html
+++ b/index.html
@@ -1,142 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Layout Practice Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class ="body">
 
-    <div class ="fixed">Fixed</div> 
-    <div class ="container">
+<body class="body">
 
-        <header class ="section">
-            <h1 class ="headerHeading">CSS Layout Practice Page</h1>
-            <p class ="headerdesc1">Practice CSS Grid, Flexbox, Positioning, Media Queries, and More!</p>
+    <div class="fixed">Fixed</div>
+    <div class="container">
+
+        <header class="section">
+            <h1 class="headerHeading">CSS Layout Practice Page</h1>
+            <p class="headerdesc1">Practice CSS Grid, Flexbox, Positioning, Media Queries, and More!</p>
         </header>
-        
-        <section class ="section">
-            <h2 class ="title">🔲 CSS Grid Practice</h2>
+
+        <section class="section">
+            <h2 class="title">🔲 CSS Grid Practice</h2>
             <h3>Basic Grid (Auto-fit & Minmax)</h3>
 
-            <div class = "grid-base">
-                <div class ="base-item">Grid Item 1</div>
-                <div class ="base-item">Grid Item 2</div>
-                <div class ="base-item">Grid Item 3</div>
-                <div class ="base-item">Grid Item 4</div>
-                <div class ="base-item">Grid Item 5</div>
-                <div class ="base-item">Grid Item 6</div>
+            <div class="grid-base">
+                <div class="base-item">Grid Item 1</div>
+                <div class="base-item">Grid Item 2</div>
+                <div class="base-item">Grid Item 3</div>
+                <div class="base-item">Grid Item 4</div>
+                <div class="base-item">Grid Item 5</div>
+                <div class="base-item">Grid Item 6</div>
             </div>
 
             <h3>Advanced Grid Layout</h3>
 
-            <div class = "grid-advanced">
-                <div class ="base-item grid-header">Header (spans 3 columns)</div>
-                <div class ="base-item grid-sidebar">Sidebar</div>
-                <div class ="base-item grid-footer-left">Footer Left</div>
-                <div class ="base-item grid-main-content">Main Content</div>
-                <div class ="base-item grid-ads">Ads</div>
-                <div class ="base-item grid-footer-right">Footer Right</div>
+            <div class="grid-advanced">
+                <div class="base-item grid-header">Header (spans 3 columns)</div>
+                <div class="base-item grid-sidebar">Sidebar</div>
+                <div class="base-item grid-footer-left">Footer Left</div>
+                <div class="base-item grid-main-content">Main Content</div>
+                <div class="base-item grid-ads">Ads</div>
+                <div class="base-item grid-footer-right">Footer Right</div>
             </div>
         </section>
 
-        <section class = "section">
-            <h2 class = "title">📦 Flexbox Practice</h2>
+        <section class="section">
+            <h2 class="title">📦 Flexbox Practice</h2>
             <h3>Flexible Items</h3>
 
-            <div class = "flex-base">
-                <div class ="base-item flexy">Flex Item 1</div>
-                <div class ="base-item flexy">Flex Item 2</div>
-                <div class ="base-item flexy">Flex Item 3</div>
+            <div class="flex-base">
+                <div class="base-item flexy">Flex Item 1</div>
+                <div class="base-item flexy">Flex Item 2</div>
+                <div class="base-item flexy">Flex Item 3</div>
             </div>
-            
+
             <h3>Flex Direction & Alignment</h3>
 
-            <div class ="flex-advanced">
-                <div class ="base-item">Left</div>
-                <div class ="base-item">Center</div>
-                <div class ="base-item">Right</div>
+            <div class="flex-advanced">
+                <div class="base-item">Left</div>
+                <div class="base-item">Center</div>
+                <div class="base-item">Right</div>
             </div>
 
-            <div class ="flex-advanced2">
-                <div class ="base-item">Column Item 1</div>
-                <div class ="base-item">Column Item 2</div>
-                <div class ="base-item">Column Item 3</div>
+            <div class="flex-advanced2">
+                <div class="base-item">Column Item 1</div>
+                <div class="base-item">Column Item 2</div>
+                <div class="base-item">Column Item 3</div>
             </div>
         </section>
 
-        <section class ="section">
-            <h2 class ="title">📍 Position Practice</h2>
-            <div class ="base-item sticky">Sticky Header (scroll to see effect)</div>
-            <div class ="relative-container">
-                <div class ="base-item relative">Relative Container</div>
-                <div class ="base-item absolute">Absolute Position</div>
+        <section class="section">
+            <h2 class="title">📍 Position Practice</h2>
+            <div class="base-item sticky">Sticky Header (scroll to see effect)</div>
+            <div class="relative-container">
+                <div class="base-item relative">Relative Container</div>
+                <div class="base-item absolute">Absolute Position</div>
             </div>
-            <p calss = "position">Notice the fixed position element in the bottom-right corner!</p>
+            <p calss="position">Notice the fixed position element in the bottom-right corner!</p>
         </section>
 
-        <section class = "section">
+        <section class="section">
 
-            <h2 class = "title">📊 Table Practice</h2>
+            <h2 class="title">📊 Table Practice</h2>
             <h3>Styled Data Table</h3>
 
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Position</th>
-                    <th>Department</th>
-                    <th>Salary</th>
-                    <th>Status</th>
-                </tr>
+            <div class="table-container">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Position</th>
+                            <th>Department</th>
+                            <th>Salary</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
 
-                <tr>
-                    <td>John Doe</td>
-                    <td>Frontend Developer</td>
-                    <td>Engineering</td>
-                    <td>$75,000</td>
-                    <td>Active</td>
-                </tr>
+                    <tbody>
+                        <tr>
+                            <td>John Doe</td>
+                            <td>Frontend Developer</td>
+                            <td>Engineering</td>
+                            <td>$75,000</td>
+                            <td>Active</td>
+                        </tr>
 
-                <tr>
-                    <td>Jane Smith			</td>
-                    <td>UX Designer	Design</td>
-                    <td>$68,000</td>
-                    <td>Active</td>
-                    <td></td>
-                </tr>
+                        <tr>
+                            <td>Jane Smith</td>
+                            <td>UX Designer</td>
+                            <td>Design</td>
+                            <td>$68,000</td>
+                            <td>Active</td>
 
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+                        </tr>
 
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+                        <tr>
+                            <td>Mike Johnson</td>
+                            <td>Backend Developer</td>
+                            <td>Engineering</td>
+                            <td>$80,000</td>
+                            <td>On Leave</td>
+                        </tr>
 
-
-
-            </table>
-            <!--should be tabel-->
+                        <tr>
+                            <td>Sarah Wilson</td>
+                            <td>Product Manager </td>
+                            <td>Product</td>
+                            <td>$90,000 </td>
+                            <td>Active</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
             <h3>Responsive Card Layout (Alternative to Tables)</h3>
 
-            <!--should be tabel-->
+            <div class="grid-table-container">
+                <div class="grid-table-item">
+                    <h4><strong class="pbold">John Doe</strong></h4>
+                    <p><strong class="pbold">Position:</strong> Frontend Developer</p>
+                    <p><strong class="pbold">Department:</strong> Engineering</p>
+                    <p><strong class="pbold">Salary:</strong> $75,000</p>
+                </div>
+
+                <div class="grid-table-item">
+                    <h4><strong class="pbold">Jane Smith</strong></h4>
+                    <p><strong class="pbold">Position:</strong> UX Designer</p>
+                    <p><strong class="pbold">Department:</strong> Design</p>
+                    <p><strong class="pbold">Salary:</strong> $68,000</p>
+                </div>
+
+                <div class="grid-table-item">
+                    <h4><strong class="pbold">Mike Johnson</strong></h4>
+                    <p><strong class="pbold">Position:</strong> Backend Developer</p>
+                    <p><strong class="pbold">Department:</strong> Engineering</p>
+                    <p><strong class="pbold">Salary:</strong> $80,000</p>
+                </div>
+            </div>
 
         </section>
 
-        <section class = "section">
-            <h2 class = "title">📝 Form & Input Practice</h2>
-        </section>
+        <section class="section">
 
+            <div class="form-container">
+
+                <h2 class="title">📝 Form & Input Practice</h2>
+
+                <div class="text-inputs">
+                    <h3>Text Inputs</h3>
+
+                    <div class="base-input">
+                        <label for="fullname">Full Name</label>
+                        <input type="text" id="fullname" class="user-input" placeholder="Enter your full name">
+                    </div>
+
+                    <div class="base-input">
+                        <label for="email">Email Address</label>
+                        <input type="email" id="email" class="user-input input-positive" placeholder="your@email.com"
+                            value="john@example.com">
+                    </div>
+
+                    <div class="base-input">
+                        <label for="password">Password<label>
+                                <input type="password" id="password" class="user-input input-negative"
+                                    placeholder="Enter password">
+                    </div>
+
+                    <div class="base-input">
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" id="phone" class="user-input" placeholder="+1 (555) 123-4567">
+                    </div>
+
+                </div>
+
+                <div class="interactive-inputs">
+                    <h3>Select & Options</h3>
+
+                    <div class="dropdown">
+                        <label for="country">Country</label>
+
+                        <select class="dropdown" id="country">
+                            <option value="">Select a country</option>
+                            <option value="us">United States</option>
+                            <option value="ca">Canada</option>
+                            <option value="uk">United Kingdom</option>
+                            <option value="de">Germany</option>
+                            <option value="fr">France</option>
+                        </select>
+
+                    </div>
+
+                    <div class="radio">
+                        <label>Preferred Contact Method</label>
+
+                        <div class="radio-item">
+                            <input type="radio" id="email" name="contact" value="email">
+                            <label for="email">Email</label>
+                        </div>
+
+                        <div class="radio-item">
+                            <input type="radio" id="phone" name="contact" value="phone">
+                            <label for="phone">Phone</label>
+                        </div>
+
+                        <div class="radio-item">
+                            <input type="radio" id="sms" name="contact" value="sms">
+                            <label for="sms">SMS</label>
+                        </div>
+                    </div>
+
+                    <div class="checkbox">
+                        <div class="checkbox-item">
+                            <input type="checkbox" id="newsletter" name="newsletter" value="newsletter">
+                            <label for="newsletter"> Subscribe to newsletter</label><br>
+                        </div>
+                        <div class="checkbox-item">
+                            <input type="checkbox" id="agree" name="agree" class="styled-checkbox" value="agree">
+                            <label for="agree"> I agree to the terms and conditions</label><br>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="message">
+                    <label for="message">Message</label>
+                    <div class="textarea-container">
+                        <textarea id="message" class="styled-textarea"
+                            placeholder="Enter your message here..."></textarea>
+                    </div>
+                </div>
+
+                <div class="date">
+                    <label for="date">Date</label>
+                    <input type="date" id="date" name="date" class="styled-date">
+                </div>
+
+                <div class="range-slider">
+                    <label for="range">Ragnge Slider</label>
+                    <input type="rae" min="0" max="100" value="50" class="slider" id="range">
+                </div>
+            </div>
+        </section>
     </div>
 </body>
+
 </html>
