one small issue left

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         </div>
 
                         <div class="base-input">
-                            <label for="password">Password<label>
+                            <label for="password">Password</label>
                             <input type="password" id="password" class="user-input input-negative" placeholder="Enter password">
                         </div>
 
@@ -248,7 +248,7 @@
 
                 <div class="base-input">
                     <label for="date">Date</label>
-                    <input type="date" id="date" name="date" class="user-input styled-date">
+                    <input type="date" id="date" name="date" class="styled-date">
                 </div>
 
                 <div class="base-input">
