--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
                 <div class="base-input">
                     <label for="message">Message</label>
                     <div class="textarea-container">
-                        <textarea id="message" class="user-input styled-textarea"
+                        <textarea id="message" class="styled-textarea"
                             placeholder="Enter your message here..."></textarea>
                     </div>
                 </div>
 
                 <div class="base-input">
                     <label for="date">Date</label>
-                    <input type="date" id="date" name="date" class="styled-date">
+                    <input type="date" id="date" name="date" class="user-input">
                 </div>
 
                 <div class="base-input">
