fixing code layout

--- a/index.html
+++ b/index.html
@@ -173,12 +173,14 @@
 
                         <div class="base-input">
                             <label for="email">Email Address</label>
-                            <input type="email" id="email" class="user-input input-positive"placeholder="your@email.com" value="john@example.com">
+                            <input type="email" id="email" class="user-input input-positive"
+                                placeholder="your@email.com" value="john@example.com">
                         </div>
 
                         <div class="base-input">
                             <label for="password">Password</label>
-                            <input type="password" id="password" class="user-input input-negative" placeholder="Enter password">
+                            <input type="password" id="password" class="user-input input-negative"
+                                placeholder="Enter password">
                         </div>
 
                         <div class="base-input">
@@ -207,14 +209,16 @@
 
                         <div class="base-input">
                             <label>Preferred Contact Method</label>
-                            <div class ="radio-container">
+                            <div class="radio-container">
                                 <div class="radio-item">
-                                    <input type="radio" id="radio-email" name="contact" value="email" class="styled-radio">
+                                    <input type="radio" id="radio-email" name="contact" value="email"
+                                        class="styled-radio">
                                     <label for="radio-email">Email</label>
                                 </div>
-                                
+
                                 <div class="radio-item">
-                                    <input type="radio" id="radio-phone" name="contact" value="phone" class="styled-radio">
+                                    <input type="radio" id="radio-phone" name="contact" value="phone"
+                                        class="styled-radio">
                                     <label for="radio-phone">Phone</label>
                                 </div>
 
@@ -227,7 +231,8 @@
 
                         <div class="base-input">
                             <div class="checkbox-item">
-                                <input type="checkbox" id="newsletter" name="newsletter" class="styled-checkbox" value="newsletter">
+                                <input type="checkbox" id="newsletter" name="newsletter" class="styled-checkbox"
+                                    value="newsletter">
                                 <label for="newsletter"> Subscribe to newsletter</label><br>
                             </div>
                             <div class="checkbox-item">
@@ -252,13 +257,13 @@
                 </div>
 
                 <div class="base-input">
-                    <label for="range">Range Slider</label>
+                    <label for="range">Rnge Slider</label>
                     <input type="range" min="0" max="100" value="50" class="slider" id="range">
                 </div>
             </div>
         </section>
 
-        
+
     </div>
 </body>
 
