fixed code layout

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </div>
 
                 <div class="base-input">
-                    <label for="range">Rnge Slider</label>
+                    <label for="range">Range Slider</label>
                     <input type="range" min="0" max="100" value="50" class="slider" id="range">
                 </div>
             </div>
