--- a/index.html
+++ b/index.html
@@ -136,21 +136,21 @@
 
             <div class="grid-table-container">
                 <div class="grid-table-item">
-                    <h4><strong class="pbold">John Doe</strong></h4>
+                    <h4>John Doe</strong></h4>
                     <p><strong class="pbold">Position:</strong> Frontend Developer</p>
                     <p><strong class="pbold">Department:</strong> Engineering</p>
                     <p><strong class="pbold">Salary:</strong> $75,000</p>
                 </div>
 
                 <div class="grid-table-item">
-                    <h4><strong class="pbold">Jane Smith</strong></h4>
+                    <h4>Jane Smith</strong></h4>
                     <p><strong class="pbold">Position:</strong> UX Designer</p>
                     <p><strong class="pbold">Department:</strong> Design</p>
                     <p><strong class="pbold">Salary:</strong> $68,000</p>
                 </div>
 
                 <div class="grid-table-item">
-                    <h4><strong class="pbold">Mike Johnson</strong></h4>
+                    <h4>Mike Johnson</strong></h4>
                     <p><strong class="pbold">Position:</strong> Backend Developer</p>
                     <p><strong class="pbold">Department:</strong> Engineering</p>
                     <p><strong class="pbold">Salary:</strong> $80,000</p>
